--- a/vignettes/testing.Rmd
+++ b/vignettes/testing.Rmd
@@ -1,17 +1,20 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "Stress-testing function calls"
+author: "Jack O. Wasey"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Stress-testing function calls}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-```{r desc, echo = FALSE}
-packageDescription("rmarkdown")
+```{r setup, echo = FALSE}
 suppressPackageStartupMessages(library(jwutil, warn.conflicts = FALSE))
 suppressPackageStartupMessages(library(testthat, warn.conflicts = FALSE))
+```
+
+```{r desc, echo = FALSE, results='asis'}
+cat(packageDescription("jwutil")$Description)
 ```
 
 # Stress and Fuzz testing
@@ -40,7 +43,7 @@ expect_that(sum(2, 1), testthat::equals(3))
 
 This becomes more interesting with named arguments, where the order also should not matter. Beware of testing features of R, rather than your code: R has a complicated but standard way of matching arguments, described in [Writing R Extensions](https://cran.r-project.org/doc/manuals/r-release/R-exts.html). If your function does complicated argument manipulation, and maybe uses `...`, this function could verify that named argument order doesn't matter.
 
-```{r combine_named}
+```{r combine_named, eval = FALSE}
 res <- gsub(pattern = "the", replacement = "le", x = "Pierre the chat")
 expect_that_combine_all_args(
   gsub(pattern = "the", replacement = "le", x = "Pierre the chat"),
