--- a/vignettes/testing.Rmd
+++ b/vignettes/testing.Rmd
@@ -6,7 +6,7 @@ output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Stress-testing function calls}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 ```{r setup, echo = FALSE}
 suppressPackageStartupMessages(library(jwutil, warn.conflicts = FALSE))
@@ -56,9 +56,9 @@ expect_that_combine_all_args(
   )
 ```
 
-For functions where the first argument is a vector, and the order of elements in the vector should not matter, `expect_that_combine_first_arg` will permute all combinations of the first argument, and expect the same result. A large number of elements will take a very long time.
+For functions where the first argument is a vector, and the order of elements in the vector should not matter, `expect_that_combine_first_arg` will permute all combinations of the first argument, and expect the same result. A large number of elements will take a very long time, factorial with the number of items.
 ```{r combine_first}
-expect_that_combine_first_arg(sum(extreme_numbers), testthat::equals(0))
+expect_that_combine_first_arg(sum(c(-1, 0, 1)), testthat::equals(0))
 ```
 
 ## Other
